
lib_LTLIBRARIES = libcctv.la libssh.la

libcctv_la_LIBADD = -lglib-2.0 -lssl -lcrypto
libcctv_la_SOURCES = libparsing.c libsha1.c libping.c liblogs.c libsocket.c libmailalarm.c libsmtp.c libdb.c libutil.c libsignal.c
libcctv_la_CPPFLAGS = -I$(top_srcdir)/lib -I/usr/include -I../include -I/usr/local/include/glib-2.0 -I/usr/local/lib/glib-2.0/include -I../include/libssh


